--- a/Functional Genomics Project.ipynb
+++ b/Functional Genomics Project.ipynb
@@ -2510,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "id": "da6261b3-fbc5-4d16-b019-a63bf60218a9",
    "metadata": {},
    "outputs": [],
@@ -2525,7 +2525,7 @@
     "for (morphological_cluster in rownames(morphological_counts)){\n",
     "    DGEresults<-as.data.frame(DGE(morphological_cluster))\n",
     "    DGEresults<-DGEresults[order(DGEresults$pvalue, decreasing=FALSE),]\n",
-    "    DE_genes[morphological_cluster,]<-c(nrow(subset(DEresults,log2FoldChange<0&pvalue<=0.05/32)),nrow(subset(DEresults,log2FoldChange>0&pvalue<=0.05/32)))\n",
+    "    DE_genes[morphological_cluster,]<-c(nrow(subset(DGEresults,log2FoldChange<0&pvalue<=0.05/32)),nrow(subset(DGEresults,log2FoldChange>0&pvalue<=0.05/32)))\n",
     "    print(morphological_cluster)\n",
     "    print(DGEresults[1:10,])\n",
     "}\n",
