--- a/Functional Genomics Project.ipynb
+++ b/Functional Genomics Project.ipynb
@@ -2082,7 +2082,7 @@
     "- A colData table whose rows are the GTEx samples and whose columns are the expression levels for all 32 morphological clusters along with the technical variables columns `COHORT`, `TRISCHD` and `DTHHRDY`. The expression levels of the morphological clusters are found in the file `morphological_counts_lunit_dino.tsv` and the technical variables columns are extracted from the clinical data table. The technical variables are included as confounding variables, because some morphological clusters have been determined (in question 2) to be associated with them.\n",
     "- 32 distinct design formulas, one for each morphological cluster. These design formulas will have as the variable of interest (the expression level of) a morphological cluster and as covariates the technical variables that have been found to be significantly associated with the morphological cluster (see question 2).\n",
     "\n",
-    "Although `DESeq2` has inbuilt methods to deal with the mutliple testing problem, performing 32 differential expression analyses adds another alyer of multiple testing which isn't accounted for. Therefore, we will apply the Bonferroni correction to the significance treshold for our differential expression hypotheses. Since there are 32 such hypotheses, the significance treshold we will adopt is $\\alpha=\\frac{0.05}{32}$."
+    "Although `DESeq2` has inbuilt methods to deal with the mutliple testing problem, performing 32 differential expression analyses adds another layer of multiple testing which isn't accounted for. Therefore, we will apply the Bonferroni correction to the significance treshold for our differential expression hypotheses. Since there are 32 such hypotheses, the significance treshold we will adopt is $\\alpha=\\frac{0.05}{32}$."
    ]
   },
   {
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 408,
    "id": "7544694d",
    "metadata": {},
    "outputs": [
@@ -2155,9 +2155,11 @@
    "source": [
     "# Read the TSV file into a data frame\n",
     "RNA_read_counts_init <- read.table(\"RNA_read_counts.tsv\", header = TRUE, sep = \"\\t\")\n",
-    "\n",
+    "# Name the rows of the read count table\n",
     "rownames(RNA_read_counts_init)<-RNA_read_counts_init$Name\n",
+    "# Delete the unnecessary columns from the table\n",
     "RNA_read_counts_unfiltered<-as.matrix(RNA_read_counts_init[,-c(1,2)])\n",
+    "# Check that the dimensions of the table are the expected ones (56200 rows for genes and 280 columns for samples)\n",
     "dim(RNA_read_counts_unfiltered)"
    ]
   },
@@ -2166,54 +2168,35 @@
    "id": "8fe502df-9e17-4e0f-ad91-3d54e6de17b9",
    "metadata": {},
    "source": [
-    "Next, we filter the read count table by eliminating the genes that have a low expression level and those whose expression level has low variability (since we are interested in differential expression, genes that have a constant level of expression accross samples are of no interest). To do this we use the `mad` command in `R`, wich\n",
-    "\n",
-    "Let $X=\\{x_1,\\ldots,x_n\\}$ be a sample of a univariate random variable. The _mean absolute deviation_ of $X$ is defined as the median of the absolute deviations from the sample's median, or in symbolic form\n",
+    "Next, we filter the read count table by eliminating the genes that have a low expression level and those whose expression level has low variability (since we are interested in differential expression, genes that have a constant level of expression accross samples are of no interest). To do this we use the `mad` command in `R`, wich computes the _mean absolute deviation_. Given a sample $X=\\{x_1,\\ldots,x_n\\}$ of a univariate random variable, the _mean absolute deviation_ of $X$ is defined as the median of the absolute deviations from the sample's median, or in symbolic form\n",
     "\n",
     "\\begin{equation*}\n",
     "\\mathrm{MAD}=\\mathrm{median}(\\{\\vert x_i-\\mathrm{median}(X)\\vert\\,\\vert\\,i=1,\\ldots,n\\})\n",
-    "\\end{equation*}"
+    "\\end{equation*}\n",
+    "\n",
+    "Note that by discarding genes with low variability we also discard genes with low expression."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 409,
    "id": "09de8449-f3d8-451a-8890-45488716b944",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize a vector of the same length as the number of rows in the count table\n",
     "MAD<-numeric(nrow(RNA_read_counts_unfiltered))\n",
+    "# Fill the entries of this vector with the values of the MAD for each row in the count table\n",
     "for (i in 1:nrow(RNA_read_counts_unfiltered)){\n",
     "    MAD[i]<-mad(RNA_read_counts_unfiltered[i,])\n",
     "}\n",
-    "#Get the indices of the transcripts which are extremely little expressed\n",
+    "# Get the indices of the transcripts which show no variation\n",
     "rows_to_remove<-which(MAD==0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "964935e3-2fc9-45f0-900c-fc36b46acac7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "    Min.  1st Qu.   Median     Mean  3rd Qu.     Max. \n",
-       "     0.0      0.0      0.7    393.5     48.9 394697.8 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "summary(MAD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 411,
    "id": "4ef5c335-a4b9-4199-aa28-b74b44cbc49e",
    "metadata": {},
    "outputs": [
@@ -2245,117 +2228,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A matrix: 6 × 280 of type int</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>GTEX.111YS.0526</th><th scope=col>GTEX.1122O.1126</th><th scope=col>GTEX.1128S.0326</th><th scope=col>GTEX.117XS.0426</th><th scope=col>GTEX.117YW.0226</th><th scope=col>GTEX.11DXX.0426</th><th scope=col>GTEX.11DXZ.0426</th><th scope=col>GTEX.11DYG.1226</th><th scope=col>GTEX.11EM3.0226</th><th scope=col>GTEX.11EMC.0926</th><th scope=col>⋯</th><th scope=col>GTEX.1R9K5.1426</th><th scope=col>GTEX.1R9PM.0326</th><th scope=col>GTEX.1R9PN.0226</th><th scope=col>GTEX.1R9PO.0226</th><th scope=col>GTEX.1RAZA.1126</th><th scope=col>GTEX.1RAZR.0626</th><th scope=col>GTEX.1RNTQ.0726</th><th scope=col>GTEX.1RQED.1126</th><th scope=col>GTEX.1S3DN.0626</th><th scope=col>GTEX.1S5ZA.1126</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>ENSG00000227232.5</th><td>78</td><td>70</td><td>180</td><td>78</td><td>152</td><td>76</td><td>132</td><td>143</td><td>88</td><td>143</td><td>⋯</td><td>134</td><td>142</td><td>140</td><td> 69</td><td>183</td><td>61</td><td>157</td><td>103</td><td> 57</td><td>70</td></tr>\n",
-       "\t<tr><th scope=row>ENSG00000233750.3</th><td> 1</td><td> 2</td><td>  0</td><td> 1</td><td>  0</td><td> 3</td><td>  0</td><td>  0</td><td> 0</td><td>  2</td><td>⋯</td><td> 10</td><td>  1</td><td>  3</td><td>  2</td><td>  0</td><td> 0</td><td>  2</td><td>  1</td><td>  0</td><td> 2</td></tr>\n",
-       "\t<tr><th scope=row>ENSG00000268903.1</th><td>29</td><td>41</td><td>103</td><td>36</td><td> 15</td><td>52</td><td>  8</td><td> 17</td><td>32</td><td> 47</td><td>⋯</td><td>158</td><td> 14</td><td>161</td><td> 86</td><td> 15</td><td>14</td><td> 33</td><td> 35</td><td> 93</td><td>37</td></tr>\n",
-       "\t<tr><th scope=row>ENSG00000269981.1</th><td>13</td><td>25</td><td> 66</td><td>29</td><td>  5</td><td>42</td><td>  5</td><td>  4</td><td>29</td><td> 18</td><td>⋯</td><td>122</td><td>  6</td><td> 76</td><td>173</td><td>  5</td><td>14</td><td> 14</td><td> 17</td><td>100</td><td>26</td></tr>\n",
-       "\t<tr><th scope=row>ENSG00000241860.6</th><td> 2</td><td>17</td><td> 70</td><td>27</td><td> 11</td><td>19</td><td>  4</td><td>  5</td><td>25</td><td> 36</td><td>⋯</td><td> 26</td><td> 24</td><td> 39</td><td> 76</td><td> 21</td><td>16</td><td> 21</td><td> 22</td><td> 28</td><td> 2</td></tr>\n",
-       "\t<tr><th scope=row>ENSG00000279928.2</th><td> 0</td><td> 1</td><td>  4</td><td> 4</td><td>  0</td><td> 0</td><td>  0</td><td>  0</td><td> 2</td><td>  0</td><td>⋯</td><td>  4</td><td>  1</td><td>  4</td><td>  5</td><td>  0</td><td> 2</td><td>  0</td><td>  0</td><td>  0</td><td> 0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A matrix: 6 × 280 of type int\n",
-       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
-       "  & GTEX.111YS.0526 & GTEX.1122O.1126 & GTEX.1128S.0326 & GTEX.117XS.0426 & GTEX.117YW.0226 & GTEX.11DXX.0426 & GTEX.11DXZ.0426 & GTEX.11DYG.1226 & GTEX.11EM3.0226 & GTEX.11EMC.0926 & ⋯ & GTEX.1R9K5.1426 & GTEX.1R9PM.0326 & GTEX.1R9PN.0226 & GTEX.1R9PO.0226 & GTEX.1RAZA.1126 & GTEX.1RAZR.0626 & GTEX.1RNTQ.0726 & GTEX.1RQED.1126 & GTEX.1S3DN.0626 & GTEX.1S5ZA.1126\\\\\n",
-       "\\hline\n",
-       "\tENSG00000227232.5 & 78 & 70 & 180 & 78 & 152 & 76 & 132 & 143 & 88 & 143 & ⋯ & 134 & 142 & 140 &  69 & 183 & 61 & 157 & 103 &  57 & 70\\\\\n",
-       "\tENSG00000233750.3 &  1 &  2 &   0 &  1 &   0 &  3 &   0 &   0 &  0 &   2 & ⋯ &  10 &   1 &   3 &   2 &   0 &  0 &   2 &   1 &   0 &  2\\\\\n",
-       "\tENSG00000268903.1 & 29 & 41 & 103 & 36 &  15 & 52 &   8 &  17 & 32 &  47 & ⋯ & 158 &  14 & 161 &  86 &  15 & 14 &  33 &  35 &  93 & 37\\\\\n",
-       "\tENSG00000269981.1 & 13 & 25 &  66 & 29 &   5 & 42 &   5 &   4 & 29 &  18 & ⋯ & 122 &   6 &  76 & 173 &   5 & 14 &  14 &  17 & 100 & 26\\\\\n",
-       "\tENSG00000241860.6 &  2 & 17 &  70 & 27 &  11 & 19 &   4 &   5 & 25 &  36 & ⋯ &  26 &  24 &  39 &  76 &  21 & 16 &  21 &  22 &  28 &  2\\\\\n",
-       "\tENSG00000279928.2 &  0 &  1 &   4 &  4 &   0 &  0 &   0 &   0 &  2 &   0 & ⋯ &   4 &   1 &   4 &   5 &   0 &  2 &   0 &   0 &   0 &  0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A matrix: 6 × 280 of type int\n",
-       "\n",
-       "| <!--/--> | GTEX.111YS.0526 | GTEX.1122O.1126 | GTEX.1128S.0326 | GTEX.117XS.0426 | GTEX.117YW.0226 | GTEX.11DXX.0426 | GTEX.11DXZ.0426 | GTEX.11DYG.1226 | GTEX.11EM3.0226 | GTEX.11EMC.0926 | ⋯ | GTEX.1R9K5.1426 | GTEX.1R9PM.0326 | GTEX.1R9PN.0226 | GTEX.1R9PO.0226 | GTEX.1RAZA.1126 | GTEX.1RAZR.0626 | GTEX.1RNTQ.0726 | GTEX.1RQED.1126 | GTEX.1S3DN.0626 | GTEX.1S5ZA.1126 |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| ENSG00000227232.5 | 78 | 70 | 180 | 78 | 152 | 76 | 132 | 143 | 88 | 143 | ⋯ | 134 | 142 | 140 |  69 | 183 | 61 | 157 | 103 |  57 | 70 |\n",
-       "| ENSG00000233750.3 |  1 |  2 |   0 |  1 |   0 |  3 |   0 |   0 |  0 |   2 | ⋯ |  10 |   1 |   3 |   2 |   0 |  0 |   2 |   1 |   0 |  2 |\n",
-       "| ENSG00000268903.1 | 29 | 41 | 103 | 36 |  15 | 52 |   8 |  17 | 32 |  47 | ⋯ | 158 |  14 | 161 |  86 |  15 | 14 |  33 |  35 |  93 | 37 |\n",
-       "| ENSG00000269981.1 | 13 | 25 |  66 | 29 |   5 | 42 |   5 |   4 | 29 |  18 | ⋯ | 122 |   6 |  76 | 173 |   5 | 14 |  14 |  17 | 100 | 26 |\n",
-       "| ENSG00000241860.6 |  2 | 17 |  70 | 27 |  11 | 19 |   4 |   5 | 25 |  36 | ⋯ |  26 |  24 |  39 |  76 |  21 | 16 |  21 |  22 |  28 |  2 |\n",
-       "| ENSG00000279928.2 |  0 |  1 |   4 |  4 |   0 |  0 |   0 |   0 |  2 |   0 | ⋯ |   4 |   1 |   4 |   5 |   0 |  2 |   0 |   0 |   0 |  0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "                  GTEX.111YS.0526 GTEX.1122O.1126 GTEX.1128S.0326\n",
-       "ENSG00000227232.5 78              70              180            \n",
-       "ENSG00000233750.3  1               2                0            \n",
-       "ENSG00000268903.1 29              41              103            \n",
-       "ENSG00000269981.1 13              25               66            \n",
-       "ENSG00000241860.6  2              17               70            \n",
-       "ENSG00000279928.2  0               1                4            \n",
-       "                  GTEX.117XS.0426 GTEX.117YW.0226 GTEX.11DXX.0426\n",
-       "ENSG00000227232.5 78              152             76             \n",
-       "ENSG00000233750.3  1                0              3             \n",
-       "ENSG00000268903.1 36               15             52             \n",
-       "ENSG00000269981.1 29                5             42             \n",
-       "ENSG00000241860.6 27               11             19             \n",
-       "ENSG00000279928.2  4                0              0             \n",
-       "                  GTEX.11DXZ.0426 GTEX.11DYG.1226 GTEX.11EM3.0226\n",
-       "ENSG00000227232.5 132             143             88             \n",
-       "ENSG00000233750.3   0               0              0             \n",
-       "ENSG00000268903.1   8              17             32             \n",
-       "ENSG00000269981.1   5               4             29             \n",
-       "ENSG00000241860.6   4               5             25             \n",
-       "ENSG00000279928.2   0               0              2             \n",
-       "                  GTEX.11EMC.0926 ⋯ GTEX.1R9K5.1426 GTEX.1R9PM.0326\n",
-       "ENSG00000227232.5 143             ⋯ 134             142            \n",
-       "ENSG00000233750.3   2             ⋯  10               1            \n",
-       "ENSG00000268903.1  47             ⋯ 158              14            \n",
-       "ENSG00000269981.1  18             ⋯ 122               6            \n",
-       "ENSG00000241860.6  36             ⋯  26              24            \n",
-       "ENSG00000279928.2   0             ⋯   4               1            \n",
-       "                  GTEX.1R9PN.0226 GTEX.1R9PO.0226 GTEX.1RAZA.1126\n",
-       "ENSG00000227232.5 140              69             183            \n",
-       "ENSG00000233750.3   3               2               0            \n",
-       "ENSG00000268903.1 161              86              15            \n",
-       "ENSG00000269981.1  76             173               5            \n",
-       "ENSG00000241860.6  39              76              21            \n",
-       "ENSG00000279928.2   4               5               0            \n",
-       "                  GTEX.1RAZR.0626 GTEX.1RNTQ.0726 GTEX.1RQED.1126\n",
-       "ENSG00000227232.5 61              157             103            \n",
-       "ENSG00000233750.3  0                2               1            \n",
-       "ENSG00000268903.1 14               33              35            \n",
-       "ENSG00000269981.1 14               14              17            \n",
-       "ENSG00000241860.6 16               21              22            \n",
-       "ENSG00000279928.2  2                0               0            \n",
-       "                  GTEX.1S3DN.0626 GTEX.1S5ZA.1126\n",
-       "ENSG00000227232.5  57             70             \n",
-       "ENSG00000233750.3   0              2             \n",
-       "ENSG00000268903.1  93             37             \n",
-       "ENSG00000269981.1 100             26             \n",
-       "ENSG00000241860.6  28              2             \n",
-       "ENSG00000279928.2   0              0             "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "# Remove from the count table the rows of genes with no variation\n",
     "RNA_read_counts<-RNA_read_counts_unfiltered[-rows_to_remove,]\n",
-    "dim(RNA_read_counts)\n",
-    "head(RNA_read_counts)"
+    "# Check how many genes are left after filetring\n",
+    "dim(RNA_read_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62622328-c37a-46c2-ab15-f9b7d891a53a",
+   "metadata": {},
+   "source": [
+    "As we can see, this filtering procedure has removed more than half of the rows from our count table. We will now create the `colData` table, the second ingredient necessary to run `DESeq2`. For the morphological clusters columns of this table, we use instead of the raw counts the $\\log_{10} (x+1)$ of the counts, so as to obtain distributions that are more suitable for `DESeq2` analyses. Then, we append to the table the columns `COHORT`, `TRISCHD` and `DTHHRDY` from the `cinical_data` table. They are known confounding variables for some clusters and therefore we must take them into account."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 412,
    "id": "e11d980c-dbac-487b-bf6c-e83311865497",
    "metadata": {},
    "outputs": [
@@ -2475,9 +2367,20 @@
     }
    ],
    "source": [
+    "# Take the log(x+1) of the morphological cluster counts\n",
     "log_morphological_counts<-as.matrix(log10(morphological_counts_init[,-1]+1))\n",
+    "# Create the colData table by appending the technical variables to the log morphological counts \n",
     "coldata<-cbind(log_morphological_counts,COHORT=as.factor(clinical_data$COHORT),TRISCHD=as.numeric(clinical_data$TRISCHD),DTHHRDY=as.factor(clinical_data$DTHHRDY))\n",
+    "# Display the first rows of the colData table\n",
     "head(coldata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "115d3a03-de60-4517-a0bc-2c2ed865beff",
+   "metadata": {},
+   "source": [
+    "In order to automate our analyses, we define a function that, given a morphological cluster, returns all the technical variables that are significantly associated with it, and are therefore confounding variables."
    ]
   },
   {
@@ -2497,6 +2400,14 @@
     "        {convar<-c(convar,'DTHHRDY')}\n",
     "    return (convar)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9a32ede-9006-4dcf-9e1a-ffa604c4eccf",
+   "metadata": {},
+   "source": [
+    "We also define a function that returns the appropriate design formula for a morphological cluster, i.e. a formula with the cluster as the last symbol in the expression, and with confounding variables as covariates."
    ]
   },
   {
@@ -2522,6 +2433,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "470aa382-fdf4-42b6-8577-44925d78c990",
+   "metadata": {},
+   "source": [
+    "Finally we define a function which outputs the results table of a `DESeq2` analysis run on an input morphological cluster. The design formula is of course the one returned by the above function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 402,
    "id": "ed3c3cf2-6f23-41c8-af8a-a861c41a0e95",
@@ -2536,6 +2455,14 @@
     "    DGEresults<-results(DESeq(object),name=morphological_cluster)\n",
     "    return (DGEresults)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10165f90-ed8d-411f-93d6-c85db9c7c1fd",
+   "metadata": {},
+   "source": [
+    "Here we run a code that answers both parts of question 3.1 at once. The $\\texttt{for}$ loop iterates through all morphological clusters and for each one computes the number of significant down-regulated and up-regulated genes associated with it, and returns the list of the 10 most significant up-regulated genes. The number of significant down/up-regulated genes for each cluster are registered in a $32\\times 2$ matrix. Recall that we apply the Bonferroni correction to the significance treshlod, i.e. $\\alpha=\\frac{0.05}{32}$."
    ]
   },
   {
@@ -3303,6 +3230,14 @@
     "    print(subset(DGEresults,log2FoldChange>0)[1:10,])\n",
     "}\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08784b1c-900a-46c2-9378-c75a74a4bbbf",
+   "metadata": {},
+   "source": [
+    "Here is the matrix containing the numbers of significant down/up-regulated genes for each morphological cluster."
    ]
   },
   {
